Bunch of changes (read desc)
-remove the wrench icon
-replace the "what's new" text with something about poktube migration
-remove the "milestone 1" card look from browse
-changed the login button in index
-reverted register layout due to account creation bug
-setting pages shows user's email address (or a migrated from poktube note)
-subscribe button is greyed out and cannot be clicked
-fix back icon bug on player

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -26,32 +26,36 @@
 	"You have %s views.": "",
 	"no": "",
 	"Your account was made %s.": "",
-	"Welcome to squareBracket!": "",
-	"This is like any other video sharing site... for now at least.": "",
+	"Welcome to squareBracket": "",
+	"Yet another website where you can upload your videos.": "",
 	"Get started": "",
-	"Login": "",
+	"Sign in": "",
 	"What's new?": "",
-	"Hello squareBracket users, We are working on a redesigned version for Alpha 3. At the end of Alpha 3, we should have already finalized the UI for at least Beta 1.": "",
-	"Chaziz/Gamerappa": "",
+	"If you have made an account on PokTube (the predecessor of squareBracket) from January 31st to April 24th 2021, then you can now sign onto squareBracket with your PokTube credentials.": "",
+	"Gamerappa": "",
 	"Featured videos": "",
 	"No featured videos.": "",
 
+	"Login": "",
 	"Incorrect username or password!": "",
 	"Please sign in": "",
 	"Had an account on PokTube? You can now log into squareBracket using your PokTube credentials.": "",
 	"Username": "",
 	"Password": "",
 
+	"todo: redesign this so that it has more consistency with login, we tried to redesign this page a while back but it broke registering.": "",
 	"Email": "",
 	"Password (Again)": "",
-	"Register": "",
+	"Submit": "",
 
 	"Settings": "",
 	"Account": "",
 	"Profile": "",
 	"Partnership": "",
+	"Migrated from PokTube": "",
+	"Email address:": "",
 	"Profile settings": "",
-	"Change the appearance of your profile.": "",
+	"Change the look of your user profile.": "",
 	"Description": "",
 	"Update": "",
 	"Partner with squareBracket": "",
@@ -85,17 +89,16 @@
 	"Search": "",
 	"Theme": "",
 	"My profile": "",
-	"Log Out": "",
+	"Sign off": "",
+	"(deprecated)": "",
 	"Profile Settings": "",
 	"Change theme": "",
 	"Back": "",
 	"Light": "",
 	"Dark": "",
 	"Bootstrap Default": "",
-	"Sign off": "",
-	"Sign in": "",
 	"Sign up": "",
-	"Created by the squareBracket team": "",
+	"Created by squareBracket contributors": "",
 	"<b><span style='font-family:arial'>GAMERAPPA</span></b>": ""
 
 }
