--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -47,6 +47,9 @@
 	"Password (Again)": "",
 	"Register": "",
 
+	"Search Results for %s": "",
+	"No search results found.": "",
+
 	"Settings": "",
 	"Account": "",
 	"Profile": "",
