make some 2006L strings translatable

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -12,15 +12,66 @@
 	"Username contains invalid characters (Only alphanumeric and underscore allowed). ": "",
 	"Email isn't valid. ": "",
 
-	"Browse": "",
-
-	"Videos": "",
 	"No uploaded videos.": "",
 
+	"Rate this video:": "",
+	"ratings": "",
+	"Views:": "",
+	"Comments:": "",
+	"Favorited:": "",
+	"Sites Linking to This Video:": "",
+	"There are 0 honors for this video": "",
+	"Comments & Responses": "",
+	"New on squareBracket": "",
+
+	"Punny slogan attempting to be simillar to a certain website's slogan": "",
+	"Sign Up": "",
+	"My Account": "",
+	"History": "",
+	"QuickList": "",
+	"Log In": "",
+	"Search for": "",
+	"Search": "",
+	"Home": "",
+	"Videos": "",
 	"Channels": "",
+	"Groups": "",
+	"Categories": "",
+	"Upload": "",
+	"My Videos": "",
+	"My Favorites": "",
+	"My Friends": "",
+	"My Inbox": "",
+	"My Subscriptions": "",
+	"My Groups": "",
+	"My Channel": "",
+	"The 2006L frontend is not complete.": "",
+	"Your Account": "",
+	"Favorite": "",
+	"Playlists": "",
+	"Subscriptions": "",
+	"Inbox": "",
+	"more...": "",
+	"About": "",
+	"Blog": "",
+	"Contact": "",
+	"Discord": "",
+	"GitHub": "",
+	"Help Center": "",
+	"Video Toolbox": "",
+	"Developer APIs": "",
+	"Safety Tips": "",
+	"RSS Syndication<": "",
+	"Community Guidelines": "",
+	"Terms of Use": "",
+	"Privacy Policy": "",
+	"Copyright Info": "",
+	"Created by squareBracket contributors": "",
+
+	"Browse": "",
+
 	"No users.": "",
 
-	"Home": "",
 	"New from squareBracket": "",
 	"Hi there, %s": "",
 	"You have %s subscribers.": "",
@@ -60,11 +111,10 @@
 	"Profile settings": "",
 	"Change the look of your user profile.": "",
 	"Description": "",
-	"Update": "",
+	" Update": "",
 	"Partner with squareBracket": "",
 	"Apply for Partner": "",
 
-	"Upload": "",
 	"Warning": "",
 	"By uploading your videos onto squareBracket, you acknowledge about rules that should be common sense.": "",
 	"Video Info": "",
@@ -90,7 +140,7 @@
 	"Please sign in in order to comment.": "",
 	"Send": "",
 
-	"Search": "",
+	" Search": "",
 	"Not signed in": "",
 	"Theme": "",
 	"My profile": "",
@@ -100,7 +150,6 @@
 	"Dark": "",
 	"Bootstrap Default": "",
 	"Sign up": "",
-	"Created by squareBracket contributors": "",
 	"<b><span style='font-family:arial'>GAMERAPPA</span></b>": ""
 
 }
