fix closing tag on 2006L _layout

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -61,7 +61,7 @@
 	"Video Toolbox": "",
 	"Developer APIs": "",
 	"Safety Tips": "",
-	"RSS Syndication<": "",
+	"RSS Syndication": "",
 	"Community Guidelines": "",
 	"Terms of Use": "",
 	"Privacy Policy": "",
