do some stuff: insert js, etc.

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -12,23 +12,39 @@
 	"Username contains invalid characters (Only alphanumeric and underscore allowed). ": "",
 	"Email isn't valid. ": "",
 
+	"See More Videos": "",
+	"Recently Uploaded Videos": "",
 	"No uploaded videos.": "",
 
+	"Please login to perform this operation.": "",
+	"Please login to post a comment.": "",
+	"Are you sure you want to block this user?": "",
+	"User blocked": "",
+	"An error occured while blocking the user.": "",
+	"Block this user": "",
+	"Are you sure you want to unblock this user?": "",
+	"User unblocked": "",
+	"An error occured while unblocking the user.": "",
+	"Unblock this user": "",
 	"Rate this video:": "",
 	"ratings": "",
 	"Views:": "",
 	"Comments:": "",
 	"Favorited:": "",
 	"Sites Linking to This Video:": "",
+	"Loading Honors...": "",
+	"close": "",
 	"There are 0 honors for this video": "",
 	"Comments & Responses": "",
+	"Loading...": "",
 	"New on squareBracket": "",
 
 	"Punny slogan attempting to be simillar to a certain website's slogan": "",
-	"Sign Up": "",
+	"Hello,": "",
 	"My Account": "",
 	"History": "",
 	"QuickList": "",
+	"Sign Up": "",
 	"Log In": "",
 	"Search for": "",
 	"Search": "",
@@ -45,7 +61,7 @@
 	"My Subscriptions": "",
 	"My Groups": "",
 	"My Channel": "",
-	"The 2006L frontend is not complete.": "",
+	"Notice: The 2006L frontend is not complete. Expect a lot of broken stuff and dead links.": "",
 	"Your Account": "",
 	"Favorite": "",
 	"Playlists": "",
@@ -57,6 +73,7 @@
 	"Contact": "",
 	"Discord": "",
 	"GitHub": "",
+	"Help & Info": "",
 	"Help Center": "",
 	"Video Toolbox": "",
 	"Developer APIs": "",
