forgot the icons

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -28,6 +28,11 @@
 	"Unblock this user": "",
 	"Rate this video:": "",
 	"ratings": "",
+	"Save to Favorites": "",
+	"Add to Groups": "",
+	"Share Video": "",
+	"Post Video": "",
+	"Flag as Inappropriate": "",
 	"Views:": "",
 	"Comments:": "",
 	"Favorited:": "",
@@ -36,6 +41,9 @@
 	"close": "",
 	"There are 0 honors for this video": "",
 	"Comments & Responses": "",
+	"Post a video response": "",
+	"Post a text comment": "",
+	"Would you like to comment?": "",
 	"Loading...": "",
 	"New on squareBracket": "",
 
