--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -13,92 +13,15 @@
 	"Username contains invalid characters (Only alphanumeric and underscore allowed). ": "",
 	"Email isn't valid. ": "",
 
-	"See More Videos": "",
-	"Recently Uploaded Videos": "",
-	"None": "",
-	"No uploaded videos.": "",
-
-	"Please login to perform this operation.": "",
-	"Please login to post a comment.": "",
-	"Are you sure you want to block this user?": "",
-	"User blocked": "",
-	"An error occured while blocking the user.": "",
-	"Block this user": "",
-	"Are you sure you want to unblock this user?": "",
-	"User unblocked": "",
-	"An error occured while unblocking the user.": "",
-	"Unblock this user": "",
-	"Rate this video:": "",
-	"ratings": "",
-	"Save to Favorites": "",
-	"Add to Groups": "",
-	"Share Video": "",
-	"Post Video": "",
-	"Flag as Inappropriate": "",
-	"Views:": "",
-	"Comments:": "",
-	"Favorited:": "",
-	"Sites Linking to This Video:": "",
-	"Loading Honors...": "",
-	"close": "",
-	"There are 0 honors for this video": "",
-	"Comments & Responses": "",
-	"Post a video response": "",
-	"Post a text comment": "",
-	"Would you like to comment?": "",
-	"Loading...": "",
-	"New on squareBracket": "",
-
-	"Punny slogan attempting to be simillar to a certain website's slogan": "",
-	"Hello,": "",
-	"My Account": "",
-	"History": "",
-	"QuickList": "",
-	"Sign Up": "",
-	"Log In": "",
-	"Search for": "",
-	"Search": "",
-	"Home": "",
-	"Videos": "",
-	"Channels": "",
-	"Groups": "",
-	"Categories": "",
-	"Upload": "",
-	"My Videos": "",
-	"My Favorites": "",
-	"My Friends": "",
-	"My Inbox": "",
-	"My Subscriptions": "",
-	"My Groups": "",
-	"My Channel": "",
-	"Notice: The 2006L frontend is not complete. Expect a lot of broken stuff and dead links.": "",
-	"Your Account": "",
-	"Favorite": "",
-	"Playlists": "",
-	"Subscriptions": "",
-	"Inbox": "",
-	"more...": "",
-	"About": "",
-	"Blog": "",
-	"Contact": "",
-	"Discord": "",
-	"GitHub": "",
-	"Help & Info": "",
-	"Help Center": "",
-	"Video Toolbox": "",
-	"Developer APIs": "",
-	"Safety Tips": "",
-	"RSS Syndication": "",
-	"Community Guidelines": "",
-	"Terms of Use": "",
-	"Privacy Policy": "",
-	"Copyright Info": "",
-	"Created by squareBracket contributors": "",
-
 	"Browse": "",
 
+	"Videos": "",
+	"No uploaded videos.": "",
+
+	"Channels": "",
 	"No users.": "",
 
+	"Home": "",
 	"Recently uploaded to squareBracket": "",
 	"Hi there, %s": "",
 	"You have %s subscribers.": "",
@@ -110,7 +33,7 @@
 	"Get started": "",
 	"Sign in": "",
 	"News and updates": "",
-	"If you have made an account on PokTube (the predecessor of squareBracket) from January 31st to April 24th 2021, then you can now sign onto squareBracket with your PokTube credentials.": "",
+	"URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.": "",
 	"Gamerappa": "",
 	"Featured videos": "",
 	"No featured videos.": "",
@@ -143,6 +66,7 @@
 	"Partner with squareBracket": "",
 	"Apply for Partner": "",
 
+	"Upload": "",
 	"Your video has been uploaded!": "",
 	"Please wait for the video to be converted. This may take a few minutes.": "",
 	"When it's done you can watch it <a href='%s'>here</a>": "",
@@ -175,6 +99,7 @@
 	"Please sign in in order to comment.": "",
 	"Send": "",
 
+	"Created by squareBracket contributors": "",
 	"<b><span style='font-family:arial'>GAMERAPPA</span></b>": "",
 
 	" Search": "",
