--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -1,9 +1,7 @@
 {
 	"\\RelativeTime\\Languages\\English": "",
 
-	"Please enter your username! ": "",
-	"Please enter your password! ": "",
-	"Incorrect username or password.": "",
+	"403 Forbidden": "",
 
 	"Blank username. ": "",
 	"Blank email. ": "",
@@ -12,6 +10,9 @@
 	"Username has already been taken. ": "",
 	"Username contains invalid characters (Only alphanumeric and underscore allowed). ": "",
 	"Email isn't valid. ": "",
+	"Please enter your username! ": "",
+	"Please enter your password! ": "",
+	"Incorrect username or password.": "",
 
 	"Browse": "",
 
@@ -34,6 +35,7 @@
 	"Sign in": "",
 	"News and updates": "",
 	"URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.": "",
+	"Due to revivals now having a lower reputation, we have decided to scrap 2006L and replace it with sbNext. Also, we're most likely not going to bother importing any PokTube videos onto squareBracket.": "",
 	"Gamerappa": "",
 	"Featured videos": "",
 	"No featured videos.": "",
@@ -67,9 +69,6 @@
 	"Apply for Partner": "",
 
 	"Upload": "",
-	"Your video has been uploaded!": "",
-	"Please wait for the video to be converted. This may take a few minutes.": "",
-	"When it's done you can watch it <a href='%s'>here</a>": "",
 	"Warning": "",
 	"By uploading your videos onto squareBracket, you acknowledge about rules that should be common sense.": "",
 	"Video Info": "",
@@ -91,16 +90,12 @@
 	"Administrator Actions": "",
 
 	"This video is being processed. Try again later.": "",
-	"This video failed to convert!": "",
 	"Uploaded on %s": "",
 	"views": "",
 	"Subscribe": "",
 	"Enter comment here, Markdown can be used here.": "",
 	"Please sign in in order to comment.": "",
 	"Send": "",
-
-	"Created by squareBracket contributors": "",
-	"<b><span style='font-family:arial'>GAMERAPPA</span></b>": "",
 
 	" Search": "",
 	"Not signed in": "",
@@ -111,6 +106,8 @@
 	"Light": "",
 	"Dark": "",
 	"Bootstrap Default": "",
-	"Sign up": ""
+	"Sign up": "",
+
+	"Published on %s": ""
 
 }
