make site less dull without making everything bigger

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -30,12 +30,12 @@
 	"no": "",
 	"Your account was made %s.": "",
 	"Welcome to squareBracket": "",
-	"Yet another website where you can upload your videos.": "",
+	"I can't believe it's not PokTube": "",
 	"Get started": "",
 	"Sign in": "",
 	"News and updates": "",
-	"URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.": "",
-	"Due to revivals now having a lower reputation, we have decided to scrap 2006L and replace it with sbNext. Also, we're most likely not going to bother importing any PokTube videos onto squareBracket.": "",
+	"squareBracket's now in pre-beta. We're working on sbNext which should hopefully replace the current Bootstrap 5 (yes) layout.": "",
+	"If you have an account on both AIM Phoenix and squareBracket, we recommend changing your passwords due to a database leak that happended a while back.": "",
 	"Gamerappa": "",
 	"Featured videos": "",
 	"No featured videos.": "",
