finalium colors + proper(?) like/dislike colors

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -113,8 +113,11 @@
 	"Back": "",
 	"Light": "",
 	"Dark": "",
-	"Bootstrap Default": "",
+	"Bootstrap": "",
+	"Finalium Preview": "",
 	"Sign up": "",
+	"Registered Users": "",
+	"Videos Uploaded": "",
 
 	"Published on %s": ""
 
