--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -32,15 +32,14 @@
 	"Welcome to squareBracket": "",
 	"I can't believe it's not PokTube": "",
 	"Get started": "",
-	"Sign in": "",
+	"Login": "",
 	"News and updates": "",
-	"squareBracket's now in pre-beta. We're working on sbNext which should hopefully replace the current Bootstrap 5 (yes) layout.": "",
+	"squareBracket's now in pre-beta. We are working on two redesigns for some reason.": "",
 	"If you have an account on both AIM Phoenix and squareBracket, we recommend changing your passwords due to a database leak that happended a while back.": "",
 	"Gamerappa": "",
 	"Featured videos": "",
 	"No featured videos.": "",
 
-	"Login": "",
 	"Password successfully reset! Please login with your new password.": "",
 	"You have been successfully logged out of all devices.": "",
 	"Username": "",
@@ -117,7 +116,6 @@
 	"Dark": "",
 	"Bootstrap": "",
 	"Finalium Preview": "",
-	"Sign up": "",
 	"Registered Users": "",
 	"Videos Uploaded": "",
 
