fix profile spacing, add channels link

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -34,10 +34,8 @@
 	"Get started": "",
 	"Login": "",
 	"News and updates": "",
-	"Hello people, we have reached the next stage of development. squareBracket is now in pre-beta. We intend of going to the first beta stage pretty soon.": "",
-	"It has been reported that SubRocks has one security hole. Mister Bazinga hasen't noticed it and keeps muting the hell out of everyone on SubRocks.": "",
-	"It went from PokTube having security holes to SubRocks having security holes. The tables have been turned.": "",
-	"Gamerappa": "",
+	"Hello people, we have reached the next stage of development. squareBracket is now in pre-beta. We plan of going to the first beta stage pretty soon.": "",
+	"The squareBracket team": "",
 	"Featured videos": "",
 	"No featured videos.": "",
 
