--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -61,7 +61,7 @@
 	"Account": "",
 	"Profile": "",
 	"Partnership": "",
-	"Migrated from PokTube": "",
+	"Account migrated from PokTube": "",
 	"Email address:": "",
 	"Security options": "",
 	"Change Password": "",
@@ -71,6 +71,9 @@
 	"Log out from all devices": "",
 	"Profile settings": "",
 	"Change the look of your user profile.": "",
+	"Profile picture": "",
+	"Channel background (Partner only)": "",
+	"Channel description": "",
 	"Description": "",
 	" Update": "",
 	"Partner with squareBracket": "",
