--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -80,20 +80,22 @@
 	"Apply for Partner": "",
 
 	"Upload": "",
-	"Warning": "",
-	"By uploading your videos onto squareBracket, you acknowledge about rules that should be common sense.": "",
-	"Video Info": "",
+	"Important": "",
+	"By uploading your videos onto squareBracket, you acknowledge about the warning shown on the right.": "",
+	"Video info": "",
 	"Enter the name and description of your video.": "",
 	"Title": "",
 	"Tags": "",
-	"Upload Video File": "",
-	"Choose the video you want to upload.": "",
-	"Upload Video": "",
+	"Upload file": "",
+	"Select the video file you want to upload.": "",
+	"Warning": "",
+	"Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.": "",
+	"But I want to!": "",
 
 	"Your profile settings were successfully updated.": "",
 	" squareBracket Partner": "",
 	" Subscribe": "",
-	"Uploaded videos": "",
+	"Uploaded by %s": "",
 	"There are no videos uploaded by %s.": "",
 	"About %s": "",
 	"Last Seen": "",
