rename partner to checkmark, and redo navbar
plus other shit i don't really remember

--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -31,8 +31,11 @@
 	"No users.": "",
 
 	"Home": "",
-	"More videos": "",
+	"From my subscriptions": "",
+	"Browse subscriptions": "",
+	"There are currently no videos from your subscriptions.": "",
 	"Recently uploaded to squareBracket": "",
+	"Browse videos": "",
 	"Hi there, %s": "",
 	"s": "",
 	"You have %s subscriber%s.": "",
@@ -41,14 +44,13 @@
 	"Your account was made %s.": "",
 	"Welcome to squareBracket": "",
 	"I can't believe it's not PokTube": "",
-	"Get started": "",
-	"Login": "",
 	"News and updates": "",
-	"Hello people, we have reached the next stage of development. squareBracket is now in pre-beta. We plan of going to the first beta stage pretty soon.": "",
+	"After nearly 3 months of development after the reset, squareBracket has now entered beta.": "",
 	"The squareBracket team": "",
 	"Featured videos": "",
 	"No featured videos.": "",
 
+	"Login": "",
 	"Password successfully reset! Please login with your new password.": "",
 	"You have been successfully logged out of all devices.": "",
 	"Username": "",
@@ -70,7 +72,7 @@
 	"Settings": "",
 	"Account": "",
 	"Profile": "",
-	"Partnership": "",
+	"Checkmark": "",
 	"Account migrated from PokTube": "",
 	"Email address:": "",
 	"Security options": "",
@@ -80,49 +82,51 @@
 	"Other": "",
 	"Log out from all devices": "",
 	"Profile settings": "",
-	"Change the look of your user profile.": "",
+	"Change the look and feel of your channel's page.": "",
 	"Profile picture": "",
-	"Channel background (Partner only)": "",
+	"Channel background": "",
+	"(Checkmark only)": "",
 	"Channel description": "",
 	"Description": "",
 	"Update": "",
-	"Partner with squareBracket": "",
-	"Partnering with squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.": "",
-	"Apply for Partner": "",
+	"squareBracket Checkmark Program": "",
+	"Getting checkmarked on squareBracket can give you some benefits, which haven't been decided. No, there won't be anything related to money/ads.": "",
+	"Apply for Checkmark": "",
 	"Made using Google Forms.": "",
 
 	"Upload": "",
 	"Important": "",
 	"By uploading your videos onto squareBracket, you acknowledge about the warning shown on the right.": "",
 	"Video info": "",
-	"Enter the name and description of your video.": "",
+	"Enter the title and description of your video.": "",
 	"Title": "",
 	"Tags": "",
 	"Upload file": "",
 	"Select the video file you want to upload.": "",
 	"Warning": "",
 	"Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.": "",
-	"But I want to!": "",
+	"Upload anyways": "",
 
+	"Checkmarked": "",
 	"Your profile settings were successfully updated.": "",
-	" squareBracket Partner": "",
 	"Uploaded by %s": "",
 	"There are no videos uploaded by %s.": "",
 	"About %s": "",
-	"Last Seen": "",
-	"Date Joined": "",
+	"Last seen": "",
+	"Joined": "",
+	"Subscribers": "",
 	"Administrator Actions": "",
+	"Generate password reset for %s": "",
 
 	"This video is being processed. Try again later.": "",
 	"Uploaded on %s": "",
 	"views": "",
+	"subscribers": "",
 	"Enter comment here, Markdown can be used here.": "",
 	"Please sign in in order to comment.": "",
 	"Send": "",
 
-	"Search videos": "",
-	"Users": "",
-	"Not signed in": "",
+	"Search": "",
 	"Change theme": "",
 	"My profile": "",
 	"Sign off": "",
@@ -130,9 +134,13 @@
 	"Light": "",
 	"Dark": "",
 	"Bootstrap": "",
-	"Finalium Preview": "",
+	"Finalium": "",
 	"Users registered": "",
 	"Videos uploaded": "",
+	"About": "",
+	"Terms": "",
+	"Guidelines": "",
+	"Contact": "",
 
 	"Published on %s": ""
 
