--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -1,7 +1,9 @@
 {
 	"\\RelativeTime\\Languages\\English": "\\RelativeTime\\Languages\\English",
 
-	"403 Forbidden": "403 Forbidden",
+	"Access Denined": "Access Denined",
+
+	"No POST data.": "No POST data.",
 
 	"Blank username. ": "Blank username. ",
 	"Blank email. ": "Blank email. ",
@@ -13,6 +15,11 @@
 	"Please enter your username! ": "Please enter your username! ",
 	"Please enter your password! ": "Please enter your password! ",
 	"Incorrect username or password.": "Incorrect username or password.",
+
+	"No reset data.": "No reset data.",
+
+	"do not reset": "do not reset",
+	"Passwords aren't identical.": "Passwords aren't identical.",
 
 	"Subscribe": "Subscribe",
 	"Unsubscribe": "Unsubscribe",
